# Download-Manager

./: CMakeLists.txt  README.md  conanfile.txt  downloaddatabase.cpp  downloaddatabase.h  downloaditem.cpp  downloaditem.h  downloaditemadapter.cpp  downloaditemadapter.h  downloadmanager.cpp  downloadmanager.h  downloadrecord.cpp  downloadrecord.h  downloadtask.cpp  downloadtask.h  downloadtypes.h  mainwindow.cpp  mainwindow.h  threadpool.cpp  threadpool.h  toogle.cpp  toogle.h
.github/workflows/: build.yml  release.yml
headers/: chunkprocessor.h  downloaddatabase.h  downloaditem.h  downloaditemadapter.h  downloadmanager.h  downloadrecord.h  downloadregistry.h  downloadtask.h  downloadtypes.h  mainwindow.h  networkmanager.h  storagemanager.h  threadpool.h
src/: CMakeLists.txt  chunkprocessor.cpp  downloaddatabase.cpp  downloaditem.cpp  downloaditemadapter.cpp  downloadmanager.cpp  downloadrecord.cpp  downloadregistry.cpp  downloadtask.cpp  main.cpp  mainwindow.cpp  networkmanager.cpp  storagemanager.cpp  threadpool.cpp  toogle.cpp
tests/: CMakeLists.txt  test_chunkprocessor.cpp  test_downloaddatabase.cpp  test_downloadregistry.cpp  test_main.cpp
